index should be good on mobile, plus some fixes

--- a/css/global.css
+++ b/css/global.css
@@ -113,6 +113,22 @@ h1.header-title {
     font-size: 1.3em;
 }
 
+/*Reusable button class*/
+.my-button {
+    background-color: #4A90E2;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-size: 1.5em;
+}
+
+.my-button:hover {
+    background-color: #417fc6;
+}
+.my-button:active {
+    background-color: #386da8;
+}
+
 @media only screen and (max-width: 768px){
     .mobile-hidden {
         display: none;
@@ -153,4 +169,17 @@ h1.header-title {
         width: 30%;
     }
     
+    /*Footer CSS*/
+
+    .footer > p {
+        text-align: center;
+    }
+
+    .verse {
+        font-size: .9em;
+        margin: 10px;
+    }
+    .v-title {
+        font-size: 1em;
+    }
 }
